# CDI-Cash-Flow-Simulator

./: Dockerfile  README.md  app.py  pyproject.toml
src/: analysis_text.py  calendar_utils.py  export_handlers.py  financial_model.py
