[project]
name = "financial-modeling-case"
version = "1.0.0"
description = "Gestão de Passivos e Projeção de Fluxo de Caixa (CDI)"
authors = [{name = "Dev Team"}]
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "openpyxl>=3.1.0",
    "workalendar>=17.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"